# symbolic

./: LICENSE  README.md  default.nix  release.nix  shell.nix  symbolic.cabal
exe/: eval.hs  llvm.hs
exe/Test/: Delta.hs  Fib.hs  LLVM.hs  Rule.hs  Simple.hs
lib/Symbolic/: Dependency.hs  Differential.hs  Eval.hs  Predefined.hs  Print.hs  Simplify.hs  Type.hs  Util.hs
lib/Symbolic/CodeGen/: C.hs
lib/Symbolic/CodeGen/LLVM/: Exp.hs  JIT.hs  Operation.hs  Run.hs
tests/: test.hs
